NIFI-250: - Fixing list item wrapping

--- a/nifi/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/controller-service.css
+++ b/nifi/nifi-nar-bundles/nifi-framework-bundle/nifi-framework/nifi-web/nifi-web-ui/src/main/webapp/css/controller-service.css
@@ -104,8 +104,7 @@ div.availability-setting {
 #controller-service-referencing-components {
     border: 0 solid #CCCCCC;
     height: 280px;
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: auto;
     padding: 2px;
     width: 376px;
 }
@@ -131,6 +130,7 @@ ul.referencing-component-listing {
 
 ul.referencing-component-listing li {
     margin-bottom: 6px;
+    white-space: nowrap;
 }
 
 div.referencing-component-state {
